--- a/assets/scss/loop-main.scss
+++ b/assets/scss/loop-main.scss
@@ -1,1 +1,4 @@
-@import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@import '../../node_modules/bootstrap/scss/bootstrap';
+@import '../scss/_partials/reset';
+@import '../scss/_partials/variables';
+@import '../scss/_partials/geral';
