--- a/assets/scss/_partials/_geral.scss
+++ b/assets/scss/_partials/_geral.scss
@@ -49,3 +49,27 @@ section.header {
 .title-big {
     @include type-2(60);
 }
+
+section.leader {
+    @include type-1(15);
+    color: $third-color;
+    margin: 9em 0;
+    & .ab-leader {
+        left: 42%;
+        top: 39%;
+        height: 100%;
+        position: absolute;
+    }
+}
+
+.box-leader {
+    background-color: white;
+    padding: 6em 6em 0;
+    max-width: 655px;
+}
+
+.leader-title,
+h3.creations {
+    @include type-2(45);
+    color: $second-color;
+}
