--- a/assets/scss/_partials/_geral.scss
+++ b/assets/scss/_partials/_geral.scss
@@ -105,6 +105,7 @@ section.creations {
         }
     }
     & .sub-creations {
+        @include type-2(25);
         position: relative;
         max-width: 100%;
         width: 100%;
