--- a/assets/scss/_partials/_variables.scss
+++ b/assets/scss/_partials/_variables.scss
@@ -33,6 +33,9 @@ $for-color:hsl(0, 0%, 41%);
     @if $size==15 {
         font-size: clamp(10px, 2vw, 15px)!important;
     }
+    @else if $size==25 {
+        font-size: clamp(22px, 2vw, 25px);
+    }
     @else if $size==30 {
         font-size: clamp(25px, 3vw, 30px)!important;
     }
@@ -82,6 +85,29 @@ $images in $sizes {
             -o-transition: all 0.4s ease-in-out;
             transition: all 0.4s ease-in-out;
             opacity: 0.4;
+        }
+    }
+}
+
+@include dispositivo (mobile) {
+    $sizes: 1 url(../../../assets/img/mobile/image-bg-1.jpg), 2 url(../../../assets/img/mobile/image-bg-2.jpg), 3 url(../../../assets/img/mobile/image-bg-3.jpg), 4 url(../../../assets/img/mobile/image-bg-4.jpg), 5 url(../../../assets/img/mobile/image-bg-5.jpg), 6 url(../../../assets/img/mobile/image-bg-6.jpg), 7 url(../../../assets/img/mobile/image-bg-7.jpg), 8 url(../../../assets/img/mobile/image-bg-8.jpg);
+    @each $pos,
+    $images in $sizes {
+        .bg-pos-#{$pos} {
+            background: {
+                position: center;
+                repeat: no-repeat;
+                size: cover;
+                image: $images;
+            }
+            height: 240px;
+            ;
+            &:hover {
+                -moz-transition: all 0.4s ease-in-out;
+                -o-transition: all 0.4s ease-in-out;
+                transition: all 0.4s ease-in-out;
+                opacity: 0.4;
+            }
         }
     }
 }
