--- a/assets/scss/_partials/_variables.scss
+++ b/assets/scss/_partials/_variables.scss
@@ -11,7 +11,7 @@ $for-color:hsl(0, 0%, 41%);
     }
     color:$primary-color;
     @if $size==15 {
-        font-size: clamp(10px, 2vw, 15px)!important;
+        font-size: clamp(15px, 2vw, 17px)!important;
     }
     @else if $size==30 {
         font-size: clamp(25px, 3vw, 30px)!important;
@@ -39,6 +39,9 @@ $for-color:hsl(0, 0%, 41%);
     @else if $size==30 {
         font-size: clamp(25px, 3vw, 30px)!important;
     }
+    @else if $size==35 {
+        font-size: clamp(30px, 3vw, 35px)!important;
+    }
     @else if $size==45 {
         font-size: clamp(25px, 4vw, 45px)!important;
     }
@@ -62,7 +65,7 @@ $for-color:hsl(0, 0%, 41%);
 }
 
 //each
-$sizes: 1 url(../../../assets/img/desktop/image-bg-1.jpg),
+$posicoes: 1 url(../../../assets/img/desktop/image-bg-1.jpg),
 2 url(../../../assets/img/desktop/image-bg-2.jpg),
 3 url(../../../assets/img/desktop/image-bg-3.jpg),
 4 url(../../../assets/img/desktop/image-bg-4.jpg),
@@ -71,7 +74,7 @@ $sizes: 1 url(../../../assets/img/desktop/image-bg-1.jpg),
 7 url(../../../assets/img/desktop/image-bg-7.jpg),
 8 url(../../../assets/img/desktop/image-bg-8.jpg);
 @each $pos,
-$images in $sizes {
+$images in $posicoes {
     .bg-pos-#{$pos} {
         background: {
             position: center;
@@ -80,12 +83,6 @@ $images in $sizes {
             image: $images;
         }
         height: 450px;
-        &:hover {
-            -moz-transition: all 0.4s ease-in-out;
-            -o-transition: all 0.4s ease-in-out;
-            transition: all 0.4s ease-in-out;
-            opacity: 0.4;
-        }
     }
 }
 
