--- a/src/assets/scss/_partials/_query.scss
+++ b/src/assets/scss/_partials/_query.scss
@@ -3,7 +3,7 @@
         max-width: 100px!important;
     }
     header {
-        background-image: url("../../../assets/img/mobile/image-hero.jpg");
+        background-image: url("../../img/mobile/image-hero.jpg");
         & .navbar-collapse {
             margin-bottom: 22em;
             top: 100px;
