--- a/src/assets/scss/_partials/_geral.scss
+++ b/src/assets/scss/_partials/_geral.scss
@@ -3,7 +3,7 @@ header {
     height: 650px;
     max-height: 100%;
     background: {
-        image: url("/assets/img/desktop/image-hero.jpg");
+        image: url("../../img/desktop/image-hero.jpg");
         position: center;
         repeat: no-repeat;
         size: cover;
