--- a/src/assets/scss/_partials/_variables.scss
+++ b/src/assets/scss/_partials/_variables.scss
@@ -65,14 +65,14 @@ $for-color:hsl(0, 0%, 41%);
 }
 
 //each
-$posicoes: 1 url(../../../assets/img/desktop/image-bg-1.jpg),
-2 url(../../../assets/img/desktop/image-bg-2.jpg),
-3 url(../../../assets/img/desktop/image-bg-3.jpg),
-4 url(../../../assets/img/desktop/image-bg-4.jpg),
-5 url(../../../assets/img/desktop/image-bg-5.jpg),
-6 url(../../../assets/img/desktop/image-bg-6.jpg),
-7 url(../../../assets/img/desktop/image-bg-7.jpg),
-8 url(../../../assets/img/desktop/image-bg-8.jpg);
+$posicoes: 1 url(../../img/desktop/image-bg-1.jpg),
+2 url(../../img/desktop/image-bg-2.jpg),
+3 url(../../img/desktop/image-bg-3.jpg),
+4 url(../../img/desktop/image-bg-4.jpg),
+5 url(../../img/desktop/image-bg-5.jpg),
+6 url(../../img/desktop/image-bg-6.jpg),
+7 url(../../img/desktop/image-bg-7.jpg),
+8 url(../../img/desktop/image-bg-8.jpg);
 @each $pos,
 $images in $posicoes {
     .bg-pos-#{$pos} {
@@ -87,7 +87,7 @@ $images in $posicoes {
 }
 
 @include dispositivo (mobile) {
-    $sizes: 1 url(../../../assets/img/mobile/image-bg-1.jpg), 2 url(../../../assets/img/mobile/image-bg-2.jpg), 3 url(../../../assets/img/mobile/image-bg-3.jpg), 4 url(../../../assets/img/mobile/image-bg-4.jpg), 5 url(../../../assets/img/mobile/image-bg-5.jpg), 6 url(../../../assets/img/mobile/image-bg-6.jpg), 7 url(../../../assets/img/mobile/image-bg-7.jpg), 8 url(../../../assets/img/mobile/image-bg-8.jpg);
+    $sizes: 1 url(../../img/mobile/image-bg-1.jpg), 2 url(../../img/mobile/image-bg-2.jpg), 3 url(../../img/mobile/image-bg-3.jpg), 4 url(../../img/mobile/image-bg-4.jpg), 5 url(../../img/mobile/image-bg-5.jpg), 6 url(../../img/mobile/image-bg-6.jpg), 7 url(../../img/mobile/image-bg-7.jpg), 8 url(../../img/mobile/image-bg-8.jpg);
     @each $pos,
     $images in $sizes {
         .bg-pos-#{$pos} {
